доделал project.html

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
                 <li><a href="#personal_information">Личная информация</a></li>
                 <li><a href="#schedule">Расписание уроков</a></li>
                 <li><a href="#contact">Как связаться со мной</a></li>
+                <li><a href="projects.html">Мои проекты</a></li>
             </ul>
         </nav>
         <main>
