--- a/projects.html
+++ b/projects.html
@@ -4,21 +4,27 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>AboutMe</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <header>
             <h1>My Projects</h1>
+            <hr color="black">
+            <nav>
+                <a href="" class="nav-element">Главное Меню</a>
+                <a href="" class="nav-element">Мои Проекты</a>
+                <a href="" class="nav-element">Контакты</a>
+            </nav>
         </header>
-        <nav>
-            <a href="index.html">Главное меню</a>
-        </nav>
         <main>
-            Ниже представлены мои проекты
-            <ul class="project-card-set">
-                <li class="project-card"><a href="">Kegros KZ</a></li>
-                <li class="project-card"><a href="">Underwater Sea</a></li>
-                <li class="project-card"><a href="">Telegram Bot</a></li>
-            </ul>
+            <section id="projects">
+                <h2>Ниже представлены мои проекты</h2>
+                <ul class="project-card-set">
+                    <a href="" class="project-card"><li>Kegros KZ</li></a>
+                    <a href="" class="project-card"><li>Underwater Sea</li></a>
+                    <a href="" class="project-card"><li>Telegram Bot</li></a>
+                </ul>
+            </div>
         </main>
     </body>
 </html>
