adaptive projects.html

--- a/projects.html
+++ b/projects.html
@@ -11,18 +11,18 @@
             <h1>My Projects</h1>
             <hr color="black">
             <nav>
-                <a href="" class="nav-element">Главное Меню</a>
-                <a href="" class="nav-element">Мои Проекты</a>
-                <a href="" class="nav-element">Контакты</a>
+                <a href="" class="nav-element-main-menu"><p class="nav-element-text">Главное Меню</p></a>
+                <a href="" class="nav-element-my-projects"><p class="nav-element-text">Мои Проекты</p></a>
+                <a href="" class="nav-element-contacts"><p class="nav-element-text">Контакты</p></a>
             </nav>
         </header>
         <main>
             <section id="projects">
                 <h2>Ниже представлены мои проекты</h2>
                 <ul class="project-card-set">
-                    <a href="" class="project-card"><li>Kegros KZ</li></a>
-                    <a href="" class="project-card"><li>Underwater Sea</li></a>
-                    <a href="" class="project-card"><li>Telegram Bot</li></a>
+                    <a href="" class="project-card-kegros"><li>Kegros KZ</li></a>
+                    <a href="" class="project-card-underwater-sea"><li>Underwater Sea</li></a>
+                    <a href="" class="project-card-telegram-bot"><li>Telegram Bot</li></a>
                 </ul>
             </div>
         </main>
