--- a/projects.html
+++ b/projects.html
@@ -4,16 +4,16 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>AboutMe</title>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="projects-style.css">
     </head>
     <body>
         <header>
             <h1>My Projects</h1>
             <hr color="black">
             <nav>
-                <a href="" class="nav-element-main-menu"><p class="nav-element-text">Главное Меню</p></a>
-                <a href="" class="nav-element-my-projects"><p class="nav-element-text">Мои Проекты</p></a>
-                <a href="" class="nav-element-contacts"><p class="nav-element-text">Контакты</p></a>
+                <a href="index.html" class="nav-element-main-menu">Главное Меню</a>
+                <a href="" class="nav-element-my-projects">Мои Проекты</a>
+                <a href="" class="nav-element-contacts">Контакты</a>
             </nav>
         </header>
         <main>
@@ -24,7 +24,7 @@
                     <a href="" class="project-card-underwater-sea"><li>Underwater Sea</li></a>
                     <a href="" class="project-card-telegram-bot"><li>Telegram Bot</li></a>
                 </ul>
-            </div>
+            </section>
         </main>
     </body>
 </html>
